Bug 489702 - Replace new PrimitiveWrapper() with .valueOf()
The primitive wrapper classes (Byte, Short, Character, Integer, Long)
all have
a constructor that takes a String (or primitive) value and return a new
instance wrapping that type. They also have a valueOf method which does
the
same thing, but without creating a new object instance. Replace calls to
the
constructor and in-line calls where the object creation doesn't escape
(for
example, new Integer().intValue() or equivalent).

Change-Id: I70310f46c085879b6efa28740186426de59c81b5
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>