@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -82,7 +82,7 @@ private void oldAPISortUnit(ICompilationUnit unit, String expectedResult, boolea
 	if (testPositions) {
 		for (int i = 0; i < initialSource.length(); i++) {
 			if (!Character.isWhitespace(initialSource.charAt(i))) {
-				arrayList.add(new Integer(i));
+				arrayList.add(Integer.valueOf(i));
 			}
 		}
 		final int length = arrayList.size();
@@ -123,7 +123,7 @@ private void sortUnit(int apiLevel, ICompilationUnit unit, String expectedResult
 	if (testPositions) {
 		for (int i = 0; i < initialSource.length(); i++) {
 			if (!Character.isWhitespace(initialSource.charAt(i))) {
-				arrayList.add(new Integer(i));
+				arrayList.add(Integer.valueOf(i));
 			}
 		}
 		final int length = arrayList.size();
